--- a/src/components/ButtonGroup.astro
+++ b/src/components/ButtonGroup.astro
@@ -25,7 +25,7 @@ const { buttons } = Astro.props;
 
 <style>
   .button-group {
-    @apply inline-flex p-1 bg-paper/60 border-2 border-white rounded-full shadow-sm shadow-inkLighter/20 text-sm font-medium;
+    @apply w-fit inline-flex p-1 bg-paper/60 border-2 border-white rounded-full shadow-sm shadow-inkLighter/20 text-sm font-medium;
   }
 
   .group-button {
