simplification of two column layout

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -108,7 +108,7 @@ const updatedCrumbs = crumbs.map((crumb, index) =>
     @apply absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-inkDark ring-1 ring-inkDark ring-opacity-5;
   }
   .dropdown-menu-item {
-    @apply block px-4 py-2 text-sm !text-paper hover:bg-ink;
+    @apply block px-4 py-2 text-sm !text-white text-left hover:bg-ink;
   }
   .back-group {
     @apply flex items-center gap-2;
