--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,4 @@
 ---
-import '../styles/global.css';
 
 interface Props {
   id?: string;
@@ -67,6 +66,9 @@ const {
 )}
 
 <style>
+  .button {
+    @apply bg-inkDark p-2 px-4 rounded-md mt-4 text-paper;
+  }
   .button-wrapper {
     @apply cursor-pointer relative inline-flex h-9 items-center justify-center overflow-hidden rounded-full bg-carbon border border-white px-4 text-sm font-medium text-paper transition-all hover:shadow-md;
   }
