--- a/src/layouts/DetailsLayout.astro
+++ b/src/layouts/DetailsLayout.astro
@@ -4,7 +4,7 @@ import Breadcrumbs from '../components/Breadcrumbs.astro';
 import BackgroundImage from '../components/BackgroundImage.astro';
 import ShowcaseImage from '../components/ShowcaseImage.astro';
 import * as Icon from '@astropub/icons'
-import '../styles/layout.css';
+import '../styles/global.css';
 
 interface Props {
   title: string;
