--- a/src/layouts/TwoColumnLayout.astro
+++ b/src/layouts/TwoColumnLayout.astro
@@ -33,33 +33,27 @@ const {
   title={title}
   body_classes={layout_body_classes}
 >
-  <main class={`two-col-basis ${additionalClasses} relative`}>
+  <section class={`two-columns-wrapper ${additionalClasses}`}>
     {bgImage && (
-      <div class={`absolute [&>img]:mx-auto -bottom-20 z-0 flex w-full`}>
-        <img src={bgImage} alt="Background" class={`w-full h-full object-cover ${bgImageClasses}`} />
+      <div class="bg-image-container">
+        <img src={bgImage} alt="Background" class={` ${bgImageClasses}`} />
       </div>
     )}
-    <div class="two-col-container">
-      <aside class="two-col-left-column" transition:animate="fade">
-        <div class="two-col-left-contents">
-          <Breadcrumbs 
-            crumbs={breadcrumbs}
-            transition:persist 
-            transition:name="breadcrumbs" 
-          />
-          <AsideTitle 
-            line1={asideTitle.line1}
-            line2={asideTitle.line2}
-          />
-          {subtitle && <p class="two-col-subtitle">
-            {subtitle}
-          </p>}
-          <slot name="left-column-extra" />
-        </div>
-      </aside>
-      <section class="two-col-right-column" transition:animate="slide">
-        <slot />
-      </section>
-    </div>
-  </main>
+    <aside transition:animate="fade">
+      <Breadcrumbs 
+        crumbs={breadcrumbs}
+        transition:persist 
+        transition:name="breadcrumbs" 
+      />
+      <AsideTitle 
+        line1={asideTitle.line1}
+        line2={asideTitle.line2}
+      />
+        {subtitle && <p class="subtitle">{subtitle}</p>}
+      <slot name="left-column-extra" />
+    </aside>
+    <main transition:animate="slide">
+      <slot />
+    </main>
+  </section>
 </Layout>
