--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,78 @@
 @tailwind utilities;
 
 @layer components {
-    .button {
-        @apply bg-inkDark p-2 px-4 rounded-md mt-4 text-paper;
-    }
+  /* Two Column Layout styles */
+  .two-columns-wrapper {
+    @apply h-full grid grid-cols-[40%_1fr] max-w-[var(--content-width)] mx-auto gap-5 relative max-lg:grid-cols-1;
+  }
+
+  .two-columns-wrapper .bg-image-container {
+    @apply absolute [&>img]:mx-auto -bottom-20 z-0 flex w-full;
+  }
+
+  .bg-image-container img {
+    @apply w-full h-full object-cover;
+  }
+
+  .two-columns-wrapper aside {
+    @apply m-auto flex flex-col items-center text-center lg:justify-start lg:items-start lg:text-left;
+  }
+
+  .two-columns-wrapper aside .subtitle {
+    @apply mt-2;
+  }
+
+  .two-columns-wrapper main {
+    @apply m-auto w-full h-full flex flex-col items-start justify-center overflow-scroll relative hide-scrollbar max-lg:justify-start;
+  }
+
+  /* Simple Layouts */
+  .layout-main {
+    @apply w-[80vw] h-fit max-w-[1600px] mx-auto flex flex-col;
+  }
+  
+  .layout-background {
+    @apply absolute inset-0 z-0 flex;
+  }
+  
+  .layout-showcase {
+    @apply flex-1 flex justify-center my-10 rounded-xl border border-paper overflow-hidden shadow-xl shadow-orange-300 relative;
+  }
+
+  .layout-showcase-tag {
+    @apply absolute left-0 bottom-0 p-5 max-w-[200px] h-fit z-10 bg-paper opacity-0 rounded-md text-ink text-xs leading-5 font-medium flex flex-col gap-1 transition-all group-hover/showcase:delay-500 group-hover/showcase:opacity-100 group-hover/showcase:m-7;
+  }
+  
+  .layout-basis {
+    @apply w-full h-screen overflow-auto flex gap-8 mx-auto;
+  }
+  
+  .layout-left-column {
+    @apply w-full max-w-[480px] flex flex-col items-center justify-start gap-10 relative z-10;
+    height: calc(100vh - 40px);
+  }
+  
+  .layout-left-contents {
+    @apply flex-1 w-full mx-auto py-10 sticky top-0;
+  }
+  
+  .layout-right-column {
+    @apply flex-1 flex flex-col items-start gap-10 overflow-y-auto relative z-10 overflow-auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .layout-right-column::-webkit-scrollbar {
+    display: none;
+  }
+
+  .hide-scrollbar {
+    @apply overflow-auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 }
