--- a/src/components/SiteMenu.astro
+++ b/src/components/SiteMenu.astro
@@ -1,7 +1,6 @@
 ---
 import * as Icon from '@astropub/icons'
-import ThemeToggle from '../components/ThemeToggle.astro';
-import Button from './Button.astro';
+import Button from './buttons/Button.astro';
 
 interface Props {
   activePage?: string;
