--- a/src/components/structural/CoordinateGrid.astro
+++ b/src/components/structural/CoordinateGrid.astro
@@ -10,7 +10,7 @@
 </div>
 
 <script>
-  import { CoordinateSystem } from '../scripts/CoordinateSystem';
+  import { CoordinateSystem } from '../../scripts/CoordinateSystem';
   new CoordinateSystem();
 </script>
 
