--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
 import '../styles/global.css';
-import CoordinateGrid from '../components/CoordinateGrid.astro';
-import LoadingBar from '../components/LoadingBar.astro';
+import CoordinateGrid from '../components/structural/CoordinateGrid.astro';
+import LoadingBar from '../components/structural/LoadingBar.astro';
 import SiteMenu from '../components/SiteMenu.astro';
 
 interface Props {
