--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -1,10 +1,10 @@
 ---
-import BackButton from '../components/BackButton.astro';
+import BackButton from '../components/buttons/BackButton.astro';
 import Breadcrumbs from '../components/Breadcrumbs.astro';
+import CategoryPill from '../components/buttons/CategoryPill.astro';
 import Layout from './Layout.astro';
 import * as Icon from '@astropub/icons'
 import Gem from '../components/Gem.astro';
-import CategoryPill from '../components/CategoryPill.astro';
 
 interface Props {
   title: string;
