--- a/src/layouts/TwoColumnLayout.astro
+++ b/src/layouts/TwoColumnLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from './Layout.astro';
 import Breadcrumbs from '../components/Breadcrumbs.astro';
-import AsideTitle from '../components/AsideTitle.astro';
+import AsideTitle from '../components/structural/AsideTitle.astro';
 
 interface Props {
   title: string;
