--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import TwoColumnLayout from '../layouts/TwoColumnLayout.astro';
-import Button from '../components/Button.astro';
+import Button from '../components/buttons/Button.astro';
 import SocialIcons from '../components/SocialIcons.astro';
+import SpotifyHoverCard from '../components/integrated/SpotifyHoverCard.astro';
+import ButtonGroup from '../components/buttons/ButtonGroup.astro';
 import * as Icon from '@astropub/icons'
-import SpotifyHoverCard from '../components/SpotifyHoverCard.astro';
-import ButtonGroup from '../components/ButtonGroup.astro';
 
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' }
