--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -1,7 +1,7 @@
 ---
-import Button from '../components/Button.astro';
+import Button from '../components/buttons/Button.astro';
 import * as Icon from '@astropub/icons'
-import BackButton from './BackButton.astro';
+import BackButton from '../components/buttons/BackButton.astro';
 export interface Crumb {
   text: string;
   href: string;
