--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Button from '../components/Button.astro';
-import BackButton from '../components/BackButton.astro';
+import Button from '../components/buttons/Button.astro';
+import BackButton from '../components/buttons/BackButton.astro';
 ---
 
 <Layout title="Oops" body_classes="bg-[url('/clouds.png')] bg-cover bg-center">
