--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,6 +1,6 @@
 ---
 import TwoColumnLayout from '../layouts/TwoColumnLayout.astro';
-import Button from '../components/Button.astro';
+import Button from '../components/buttons/Button.astro';
 import Card from '../components/Card.astro';
 import { workProjects } from '../data/workProjects';
 
