--- a/src/components/buttons/BackButton.astro
+++ b/src/components/buttons/BackButton.astro
@@ -20,7 +20,7 @@ const { href, text, additionalClasses } = Astro.props;
 
 <style>
   .link-wrapper {
-    @apply flex items-center gap-2 text-paper w-fit -ml-1;
+    @apply flex items-center gap-2 text-paper w-fit;
   }
   .button-circle {
     @apply w-8 h-8 flex items-center justify-center rounded-full bg-inkLighter overflow-hidden relative hover:shadow-lg;
