--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,32 @@
     @apply m-auto w-full h-full flex flex-col items-start justify-center overflow-scroll relative hide-scrollbar max-lg:justify-start;
   }
 
+  /* Other */
+  .landscape {
+    @apply w-full h-52 fixed inset-0 mt-auto -bottom-4 z-0 bg-[url('/landscape-base.png')] bg-cover bg-bottom opacity-50 blur-[2px];
+  }
+
   /* Simple Layouts */
+  .simple-wrapper {
+    @apply w-full min-h-full max-w-[var(--content-width)] mx-auto flex flex-col relative;
+  }
+  .simple-container {
+    @apply flex flex-col gap-10 p-10 pt-0 mb-10 bg-white/5 rounded-lg backdrop-blur-md;
+  }
+  .simple-container .header {
+    @apply flex flex-col justify-center gap-5 text-center [&>h1]:mb-2;
+  }
+
+  .simple-container .subdetail {
+    @apply flex items-center justify-center gap-2;
+  }
+
+  .simple-container .subdetail :global(.gem) {
+    @apply w-4 h-4;
+  }
+
+
+  /* Test */
   .layout-main {
     @apply w-[80vw] h-fit max-w-[1600px] mx-auto flex flex-col;
   }
@@ -68,6 +93,78 @@
     display: none;
   }
 
+  /* Showcases */
+  .showcase-image-wrapper {
+    @apply rounded-lg min-h-fit flex items-center justify-center border border-white shadow-lg shadow-orange-300 opacity-0 bg-white w-full delay-75 animate-[showcase-slow_2s_cubic-bezier(0.23,1,0.320,1)_forwards];
+  }
+  .showcase-image-wrapper img {
+    @apply max-h-[400px] rounded-md w-full object-cover transition-all z-10 origin-top animate-[showcase-reveal_1s_cubic-bezier(0.23,1,0.320,1)_forwards];
+  }
+  .showcase-image-wrapper .loader-text {
+    @apply absolute m-auto p-4 flex gap-1 items-center justify-center;
+  }
+
+  /* Animations */
+  
+  @keyframes showcase-slow {
+    0% {
+      opacity: 0;
+      padding: 0px;
+    }
+    50% {
+      opacity: .5;
+      padding: 0px;
+    }
+    100% {
+      opacity: 1;
+      padding: 20px;
+    }
+  }
+
+  @keyframes showcase-reveal {
+    0% {
+      opacity: 0;
+      height: 0;
+      transform: scaleY(0);
+    }
+    79% {
+      opacity: 0;
+      height: 0;
+      transform: scaleY(0);
+    }
+    80% {
+      opacity: 1;
+      height: 40px;
+      transform: scaleY(1.05);
+    }
+    100% {
+      opacity: 1;
+      height: auto;
+      transform: scaleY(1);
+    }
+  }
+
+  .animate-slide {
+    @apply delay-75 animate-[slideIn_1.75s_cubic-bezier(0.39,0.575,0.565,1)_forwards];
+  }
+
+  @keyframes slideIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    90% {
+      opacity: 0;
+      transform: translateY(15px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  /* Helpers */
+
   .hide-scrollbar {
     @apply overflow-auto;
     -ms-overflow-style: none;
@@ -78,3 +175,4 @@
     display: none;
   }
 }
+
