--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -119,6 +119,6 @@ const { title, body_classes = '' } = Astro.props;
     @apply font-instrument text-6xl text-inkDark leading-none;
   }
   h2 {
-    @apply text-4xl text-inkDark;
+    @apply font-instrument text-4xl text-inkDark my-4;
   }
 </style>
