--- a/src/components/ShowcaseImage.astro
+++ b/src/components/ShowcaseImage.astro
@@ -23,7 +23,7 @@ const {
 
 <style>
   .shine-container {
-    @apply relative overflow-hidden rounded-xl w-full;
+    @apply relative overflow-hidden rounded-xl w-full border border-white shadow-xl shadow-orange-300/50;
     isolation: isolate;
   }
 
