--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import SimpleLayout from '../layouts/SimpleLayout.astro';
+import ContentLayout from '../layouts/ContentLayout.astro';
 import SectionBlock from '../components/SectionBlock.astro';
 import ShowcaseImage from '../components/ShowcaseImage.astro';
 import * as Icon from '@astropub/icons'
@@ -12,14 +12,11 @@ const breadcrumbs = [
 
 <section class="landscape"></section>
 
-<SimpleLayout title="I think therefore I make" breadcrumbs={breadcrumbs}>
-    <SectionBlock size="small" classNames="shadow-xl rounded-xl border border-white shadow-orange-300/50">
-      <ShowcaseImage
-          src="/people/karina.png"
-          alt="Hello"
-          shineColor="rgba(255, 255, 255, 0.25)"
-        />
-    </SectionBlock>
+<ContentLayout 
+  variant="simple" 
+  title="I think therefore I make" 
+  showcaseImage="/people/karina.png"
+  breadcrumbs={breadcrumbs}>
 
     <SectionBlock size="small">
       <h2>Maker for Life</h2>
@@ -56,7 +53,7 @@ const breadcrumbs = [
         <div><strong>With dedication</strong>I work so I can make myself proud.</div>
       </div>
     </SectionBlock>
-</SimpleLayout>
+</ContentLayout>
 
 <style>
   /* Fix note styles */
