--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -71,7 +71,7 @@ const initialCategory = Astro.url.searchParams.get('category') || 'all';
   }
 
   .listing {
-    @apply w-full max-h-[80vh] max-w-[640px] overflow-y-auto flex flex-col gap-3 justify-start lg:pr-10 max-lg:px-10 py-5 hide-scrollbar;
+    @apply w-full max-h-[80vh] 2xl:max-w-[640px] overflow-y-auto flex flex-col gap-3 justify-start py-5 hide-scrollbar;
   }
   .hide-scrollbar {
     @apply overflow-auto;
