corrects some errors

--- a/src/layouts/archived/SimpleLayout.astro
+++ b/src/layouts/archived/SimpleLayout.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from './Layout.astro';
-import Breadcrumbs from '../components/Breadcrumbs.astro';
-import ShowcaseImage from '../components/ShowcaseImage.astro';
+import Layout from './../Layout.astro';
+import Breadcrumbs from '../../components/Breadcrumbs.astro';
+import ShowcaseImage from '../../components/ShowcaseImage.astro';
 import * as Icon from '@astropub/icons'
 
 interface Props {
