--- a/src/layouts/archived/ThoughtLayout.astro
+++ b/src/layouts/archived/ThoughtLayout.astro
@@ -1,10 +1,10 @@
 ---
-import ShowcaseImage from '../components/ShowcaseImage.astro';
-import Breadcrumbs from '../components/Breadcrumbs.astro';
-import CategoryPill from '../components/buttons/CategoryPill.astro';
-import Layout from './Layout.astro';
+import ShowcaseImage from '../../components/ShowcaseImage.astro';
+import Breadcrumbs from '../../components/Breadcrumbs.astro';
+import CategoryPill from '../../components/buttons/CategoryPill.astro';
+import Layout from './../Layout.astro';
 import * as Icon from '@astropub/icons'
-import Gem from '../components/Gem.astro';
+import Gem from '../../components/Gem.astro';
 
 interface Props {
   title: string;
