--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,8 +20,7 @@ import BackButton from '../components/buttons/BackButton.astro';
 
 <style>
   .wrapper {
-    @apply flex flex-col items-center justify-center min-h-screen gap-3;
-    animation: slideUp 2s cubic-bezier(0.23, 1, 0.320, 1) forwards;
+    @apply flex flex-col items-center justify-center min-h-screen mx-auto gap-3 animate-[slideUp_2s_cubic-bezier(0.23,1,0.32,1)_forwards];
   }
 
   @keyframes slideUp {
