--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ const tabsContent: TabContent[] = [
 >
   <div slot="left-column-extra">
     <div class="flex items-center gap-4">
-      <Button type="link" href="/work" additionalClasses="fles items-center min-h-10 !text-white">
+      <Button variant="link" href="/work" additionalClasses="fles items-center min-h-10 !text-white">
         <span class="text-lg group-hover:mr-2 transition-all bg-carbon z-[1]">My Work</span>
         <Icon.ArrowRight size="20" class="ml-2 inline-block opacity-100 delay-0 group-hover:absolute group-hover:opacity-0" />
         <Icon.ArrowTopRight size="20" class="opacity-0 absolute transition-all group-hover:relative group-hover:opacity-100 inline-block delay-100" />
