--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -47,7 +47,7 @@ const sortedYears = Object.keys(projectsByYear).sort((a, b) => parseInt(b) - par
               image={project.image}
               alt_text={project.alt_text}
             >
-              <Button type="link" href="/project-details" additionalClasses="w-full">View Project</Button>
+              <Button variant="link" href="/project-details" additionalClasses="w-full">View Project</Button>
             </Card>
           ))}
         </div>
