--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,7 +10,7 @@ import BackButton from '../components/buttons/BackButton.astro';
     <p>My head might be in the clouds. Sorry to have missled you.</p>
     <div class="flex items-center my-10">
       <BackButton href="/" additionalClasses="ml-1 mr-2" />
-      <Button type="textual" additionalClasses="text-ink text-base" href="/" id="backButton">
+      <Button variant="textual" additionalClasses="text-ink text-base" href="/" id="backButton">
         Return to Home Page
       </Button>
     </div>
