--- a/src/components/buttons/CategoryPill.astro
+++ b/src/components/buttons/CategoryPill.astro
@@ -17,7 +17,7 @@ const pillClasses = "bg-inkDark text-paper";
 ---
 
 {isButton ? (
-  <Button variant="button" class:list={[baseClasses, buttonClasses, { "category-active": isActive }]} data-category={category}>
+  <button type="button" class:list={[baseClasses, buttonClasses, { "category-active": isActive }]} data-category={category}>
     {category}
   </button>
 ) : (
